samples/_failures_safe/1761148664_24fd2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad331aa1.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_ad331aa1.c:172:12: error: missing terminating " character
  172 |     printf("3 - COMPLETE
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_ad331aa1.c:172:5: error: expected expression at end of input
  172 |     printf("3 - COMPLETE
      |     ^~~~~~
./samples/SAFE/__tmp_ad331aa1.c:172:5: error: expected declaration or statement at end of input
